Fixed java versions and other configurations